# growzucchini

./: Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: pyproject.toml
app/growzucchini/config/: base.py  devices.py  hardware.py  zucchini.py
app/growzucchini/controllers/: __init__.py  exhaust_fan_speed.py  humidity.py
app/growzucchini/core/: cli.py  dispatcher.py  serial.py
app/growzucchini/core/metrics/: influxdb_client.py
app/growzucchini/core/utils/: command_util.py
app/growzucchini/devices/: exhaust_fan.py  linear_device.py  power_switch.py
app/src/growzucchini/: main.py
app/src/growzucchini/config/: __init__.py  base.py  hardware.py  zucchini.py
app/src/growzucchini/controllers/: exhaust_fan_speed.py  humidity.py  smoke.py  soil_moisture.py  temperature.py
app/src/growzucchini/core/: cli.py  dispatcher.py  serial.py
app/src/growzucchini/devices/: __init__.py  alarm_light.py  circulation_fan.py  duration_estimation_device.py  exhaust_fan.py  humidifier.py  water_pump.py
app/src/katomato/: main.py
app/src/katomato/config/: base.py  zucchini.py
app/src/katomato/controllers/: exhaust_fan_speed.py  humidity.py  smoke.py  soil_moisture.py  temperature.py
app/src/katomato/core/: cli.py  dispatcher.py  serial.py
app/src/katomato/devices/: humidifier.py  (+7 more)
app/src/katosup/: main.py
app/src/tests/: conftest.py  test_utils.py
app/tests/: conftest.py
app/tests/controllers/: test_exhaust_fan_speed.py  test_humidity.py  test_smoke.py  test_soil_moisture.py  test_temperature.py
app/tests/mocks/: serial_mock.py
(+104 files in other folders)
